<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView

        android:id="@+id/textViewAd"
        android:layout_width="144dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/ad"
        android:textSize="24sp"
        android:textStyle="bold"

        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="17dp" />

    <EditText

        android:id="@+id/editTextAd"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewAd"
        android:background="#f3eded"
        android:ems="16"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="66dp" />

    <TextView
        android:id="@+id/textViewSoyad"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="69dp"
        android:text="@string/soyad"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="125dp" />

    <EditText
        android:id="@+id/editTextSoyad"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewSoyad"
        android:background="#f3eded"
        android:ems="16"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/textViewNumara"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="148dp"
        android:text="@string/numara"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="219dp" />

    <Button
        android:id="@+id/butonkaydet"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewIsimGirin"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_light"

        android:fontFamily="serif"
        android:includeFontPadding="true"
        android:text="@string/kisiekle"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/textViewIsimGirin"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="193dp"
        android:text="@string/isimgir"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="409dp" />

    <Button
        android:id="@+id/buttonKisi"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="12dp"
        android:background="?android:attr/colorPressedHighlight"
        android:text="@string/kisilerigoster"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="447dp" />

    <EditText
        android:id="@+id/editTextNumara"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:background="#f3eded"
        android:ems="16"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="257dp" />

    <EditText
        android:id="@+id/editTextIsimara"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="124dp"
        android:background="#f3eded"
        android:ems="10"
        android:hint="İsim girin.."
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="394dp" />

    <Button
        android:id="@+id/butonkisisil"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/buttonKisi"
        android:layout_marginStart="118dp"
        android:background="@android:color/holo_orange_light"
        android:fontFamily="serif"
        android:includeFontPadding="true"
        android:text="Kişi Sil"
        android:textStyle="bold" />

    <Button
        android:id="@+id/butonguncelle"
        android:layout_width="106dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/buttonKisi"
        android:layout_marginEnd="13dp"
        android:background="@android:color/holo_orange_light"
        android:fontFamily="serif"
        android:includeFontPadding="true"
        android:text="Güncelle"
        android:textStyle="bold" />
</RelativeLayout>